--- a/content_other.css
+++ b/content_other.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	overflow: hidden;
 	text-align: center;
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.8);
 	height: 220;
 	color: white;
 	font-family: 'Fjalla One', sans-serif;
@@ -38,12 +38,12 @@
 	position: relative;
 	width: 100%;
 	overflow: hidden;
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.8);
 }
 footer {
 	width: 100%;
 	overflow: hidden;
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.8);
 	font-family: 'Fjalla One', sans-serif;
 	color: #25B4E4;
 }
@@ -59,10 +59,59 @@ footer li {
 	font-size: 50px;
 	width: 100%;
 	height: 303;
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.8);
+	border-bottom: 2px solid #777;
 }
 .maincontent_snorkel {
-	background-color: rgba(255, 255, 255, 0.7);
-	height: 800px;
+	background-color: rgba(255, 255, 255, 0.8);
+	height: 1000px;
 	padding: 50px 20px 0;
+}
+.maincontent_snorkel p {
+	font-size: 20px;
+	font-family: 'Fjalla One', sans-serif;
+	float: right;
+	padding:0 40px 0 40px;
+}
+.maincontent_snorkel h4 {
+	font-family: 'Fjalla One', sans-serif;
+}
+.maincontent_snorkel h2 {
+	font-family: 'Fjalla One', sans-serif;
+}
+
+.maincontent_snorkel h3 {
+	font-family: 'Fjalla One', sans-serif;
+	padding:0 20px 0 20px;
+}
+
+.subheader img {
+	max-height: 300px;
+	border: 3px;
+	border: 4px solid #934900;
+}
+
+table {
+	background-color: rgba(255, 255, 255, 0.8);
+	padding: 30px;
+	border-radius: 5px;
+	height: 600px;
+}
+table h1 {
+	font-size: 50px;
+	font-family: 'Fjalla One', sans-serif;
+	color: #39BDE4;
+	text-align: center;
+	vertical-align: top;
+}
+table p {
+	font-family: 'Fjalla One', sans-serif;
+	color: #39BDE4;
+	text-align: center;
+	vertical-align: top;
+	padding:50px;
+}
+table img {
+	vertical-align: top;
+	border-radius:100px;
 }
