--- a/image_gallery.css
+++ b/image_gallery.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url("IMAGE_SLIDER.css");
 div.imgbox {
 	background-color: white;
 }
@@ -41,3 +42,4 @@ div.desc {
 	display: table;
 	clear: both;
 }
+
