--- a/content_other.css
+++ b/content_other.css
@@ -91,27 +91,30 @@ footer li {
 	border: 4px solid #934900;
 }
 
-table {
-	background-color: rgba(255, 255, 255, 0.8);
-	padding: 30px;
-	border-radius: 5px;
+.div2 {
+	background-color: rgba(14, 177, 224, .5);
+	border-radius: 50px;
 	height: 600px;
-}
-table h1 {
-	font-size: 50px;
 	font-family: 'Fjalla One', sans-serif;
-	color: #39BDE4;
-	text-align: center;
+	color: white;
+
 	vertical-align: top;
+
+	font-size:30px;
 }
-table p {
-	font-family: 'Fjalla One', sans-serif;
-	color: #39BDE4;
-	text-align: center;
-	vertical-align: top;
-	padding:50px;
+
+.div2 h1
+{font-size:50px;
 }
-table img {
-	vertical-align: top;
-	border-radius:100px;
+
+.div2 img
+{
+border-radius:50%;	
+float:right;
+
 }
+
+
+
+
+
