--- a/content_other.css
+++ b/content_other.css
@@ -1,4 +1,9 @@
 @charset "utf-8";
+
+/*THis is all of my remainging CSS code.  This is mostly for the content of each page and the banner and footer.*/
+
+
+/*THis is for the banner that is right under the navigation bar*/
 .banner {
 	position: relative;
 	width: 100%;
@@ -23,6 +28,8 @@
 	padding: 0 50px 35px;
 	box-sizing: border-box;
 }
+
+/*This is for the body of the whole html*/
 #body {
 	position: relative;
 	width: 100%;
@@ -51,6 +58,8 @@ footer li {
 	list-style-type: none;
 	float: left;
 }
+
+/*This is for the title that is under the banner and above the main content*/
 .subheader {
 	padding: 50px;
 	text-align: center;
@@ -62,6 +71,9 @@ footer li {
 	background-color: rgba(255, 255, 255, 0.8);
 	border-bottom: 2px solid #777;
 }
+
+
+/*These are various styles for different areas of the website. THis is mostly for the content that is under the banner and headers.*/
 .maincontent_snorkel {
 	background-color: rgba(255, 255, 255, 0.8);
 	height: 1000px;
